--- a/Array_Alt_Kume_Islemleri.ipynb
+++ b/Array_Alt_Kume_Islemleri.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Array Alt Küme İşlemleri (Slicing)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,74 +20,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.array([1,2,3,4,5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Numpy aşağıdaki numpy dizisindeki tam sayıları da ondalıklı olarak kabul eder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.12,  2.  ,  5.  ,  1.2 , 54.5 ])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([3.12,2,5,1.2,54.5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "İçi boş bir numpy dizisi oluşturmak için aşağıdaki gibi numpy zeros kullanılır."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+       "array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19])"
       ]
      },
      "execution_count": 3,
@@ -89,7 +33,8 @@
     }
    ],
    "source": [
-    "np.zeros(10,dtype=int)"
+    "a = np.arange(1,20,2,dtype=int)\n",
+    "a"
    ]
   },
   {
@@ -100,9 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0]])"
+       "array([1, 3, 5])"
       ]
      },
      "execution_count": 4,
@@ -111,7 +54,7 @@
     }
    ],
    "source": [
-    "np.zeros((3,3),dtype=int) # 3e 3lük bir 0 matrisi oluşturduk."
+    "a[0:3] "
    ]
   },
   {
@@ -122,8 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 1],\n",
-       "       [1, 1]])"
+       "array([ 7,  9, 11, 13, 15, 17, 19])"
       ]
      },
      "execution_count": 5,
@@ -132,7 +74,7 @@
     }
    ],
    "source": [
-    "np.ones((2,2),dtype=int) # 2ye 2lik bir 1 matrisi oluşturduk."
+    "a[3:]"
    ]
   },
   {
@@ -143,9 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[3, 3, 3],\n",
-       "       [3, 3, 3],\n",
-       "       [3, 3, 3]])"
+       "array([1, 3, 5, 7, 9])"
       ]
      },
      "execution_count": 6,
@@ -154,8 +94,7 @@
     }
    ],
    "source": [
-    "np.full((3,3),3) # istenilen değerde 3e 3lük bir matris oluşturmak için\n",
-    "#full kullanılır."
+    "a[:5]"
    ]
   },
   {
@@ -166,9 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32,\n",
-       "       34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66,\n",
-       "       68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98])"
+       "array([ 3,  7, 11, 15, 19])"
       ]
      },
      "execution_count": 7,
@@ -177,50 +114,23 @@
     }
    ],
    "source": [
-    "np.arange(0,100,2) # 0'dan 100'e kadar 2şer artan bir liste oluşturuyor."
+    "a[1::2] # Birinci elemandan başlar ve ikişer ikişer artar ve o indislerei gösterir."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### İki Boyutlu Slice İşlemleri"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.11111111, 0.22222222, 0.33333333, 0.44444444,\n",
-       "       0.55555556, 0.66666667, 0.77777778, 0.88888889, 1.        ])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.linspace(0,1,10) # 0 ile 1 arasında eşit aralıklı 10 adet sayı oluşturur."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[15.02574649, 10.82187503, 11.10547756, 12.58081193],\n",
-       "       [ 7.85646623,  6.12609262, 10.2482348 , 15.46208356],\n",
-       "       [11.51753116, 10.31196928, 20.39486901, 10.7384121 ]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.normal(10,4,(3,4)) # ortalaması 10 standart sapması 4 olan 3'e 4lük bir matris oluşturduk."
+    "import numpy as np"
    ]
   },
   {
@@ -231,9 +141,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[8, 0, 8],\n",
-       "       [8, 5, 8],\n",
-       "       [6, 8, 4]])"
+       "array([[12, 28, 20, 18, 22],\n",
+       "       [17, 27, 16, 14, 21],\n",
+       "       [36, 18, 24, 24, 44],\n",
+       "       [38, 34, 27, 22, 16],\n",
+       "       [14, 11, 23, 29, 21]])"
       ]
      },
      "execution_count": 9,
@@ -242,7 +154,114 @@
     }
    ],
    "source": [
-    "np.random.randint(0,10,(3,3)) # 0 ile 10 arasında sayı üreten 3e 3lük bir matris oluşturuyor."
+    "m = np.random.randint(10,50,size=(5,5),dtype=int)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 17, 36, 38, 14])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[:,0] # tüm satırların indisi 0 olan sütununu getir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22, 21, 44, 16, 21])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[:,4] # tüm satırların indisi 4 olan sütununu getir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([17, 27, 16, 14, 21])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[1,:] # 1. satırın tüm sütunları  getir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[27, 16, 14],\n",
+       "       [18, 24, 24],\n",
+       "       [34, 27, 22]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[1:4,1:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[28, 20],\n",
+       "       [27, 16],\n",
+       "       [18, 24],\n",
+       "       [34, 27],\n",
+       "       [11, 23]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[:,1:3]"
    ]
   }
  ],
