--- a/Indexle_Elemanlara_Erismek.ipynb
+++ b/Indexle_Elemanlara_Erismek.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Array Ayırma"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,70 +11,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.array([1,2,3,4,5,6,7,8,9])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([1, 2, 3]), array([4, 5]), array([6, 7, 8, 9])]"
+       "array([ 5,  5, 19,  6, 12])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.split(x,[3,5]) # Ayrılma noktalarını vererek üç adet arraye böldük"
+    "a = np.random.randint(0,20,size=5)\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a,b,c = np.split(x,[3,5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### İki Boyutlu Ayırma ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  1,  2,  3],\n",
-       "       [ 4,  5,  6,  7],\n",
-       "       [ 8,  9, 10, 11],\n",
-       "       [12, 13, 14, 15]])"
+       "array([12,  5, 19,  6, 12])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = np.arange(16).reshape((4,4))\n",
+    "a[0] = 12\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12,  5, 19,  6, 98])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[-1] = 98\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8, 0, 3],\n",
+       "       [0, 2, 9],\n",
+       "       [2, 2, 9]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.random.randint(10,size=(3,3))\n",
     "m"
    ]
   },
@@ -93,10 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "[array([[0, 1, 2, 3],\n",
-       "        [4, 5, 6, 7]]),\n",
-       " array([[ 8,  9, 10, 11],\n",
-       "        [12, 13, 14, 15]])]"
+       "3"
       ]
      },
      "execution_count": 14,
@@ -105,43 +112,30 @@
     }
    ],
    "source": [
-    "np.vsplit(m,[2]) # iki boyutlu matrislerde dikey bölme işlemi yapmak için kullanılır."
+    "m[0,2] # matris içerisinde istenilen konuma erişmek için"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "ust,alt = np.vsplit(m,[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[ 0,  1],\n",
-       "        [ 4,  5],\n",
-       "        [ 8,  9],\n",
-       "        [12, 13]]),\n",
-       " array([[ 2,  3],\n",
-       "        [ 6,  7],\n",
-       "        [10, 11],\n",
-       "        [14, 15]])]"
+       "array([[51,  0,  3],\n",
+       "       [ 0,  2,  9],\n",
+       "       [ 2,  2,  9]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.hsplit(m,[2]) # iki boyutlu matrislerde yatay bölme işlemi yapmak için kullanılır."
+    "m[0,0] = 51 # matris içerisinde satır sütün bilgisi verilen yerin değerini değiştrimek için kullanılır.\n",
+    "m"
    ]
   }
  ],
