nothing is happened

--- a/Pandas Tutorials/Aggregate.ipynb
+++ b/Pandas Tutorials/Aggregate.ipynb
@@ -374,6 +374,29 @@
    "source": [
     "df.groupby(\"Gruplar\").aggregate({\"value1\":max,\"value2\":min}) # Bu şekilde sütunlar için istenilen metodlar çalıştırılır."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gruplar    1\n",
+       "value1     1\n",
+       "value2     1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"value1\"] == 65].count()"
+   ]
   }
  ],
  "metadata": {
