--- a/what_frequently_do_i_charge_my_phone.ipynb
+++ b/what_frequently_do_i_charge_my_phone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,137 +18,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pd.read_csv('Source/PhoneChargingState.csv')\n",
+    "dataframe = dataframe.drop(columns=\"state.hour\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dataframe[\"time\"] = pd.to_datetime(dataframe[\"time\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>state.hour</th>\n",
-       "      <th>state.value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-01-20T16:41:59.185+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-01-20T16:43:05.585+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-01-20T16:50:25.380+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-01-20T17:14:38.861+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-01-20T17:15:34.099+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1737</th>\n",
-       "      <td>2022-02-19T15:02:53.145+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1738</th>\n",
-       "      <td>2022-02-19T15:03:00.604+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1739</th>\n",
-       "      <td>2022-02-19T15:03:04.794+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1740</th>\n",
-       "      <td>2022-02-19T15:10:50.459+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1741</th>\n",
-       "      <td>2022-02-19T15:10:53.883+03:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1742 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                               time  state.hour  state.value\n",
-       "0     2022-01-20T16:41:59.185+03:00         NaN            1\n",
-       "1     2022-01-20T16:43:05.585+03:00         NaN            0\n",
-       "2     2022-01-20T16:50:25.380+03:00         NaN            0\n",
-       "3     2022-01-20T17:14:38.861+03:00         NaN            1\n",
-       "4     2022-01-20T17:15:34.099+03:00         NaN            0\n",
-       "...                             ...         ...          ...\n",
-       "1737  2022-02-19T15:02:53.145+03:00         NaN            0\n",
-       "1738  2022-02-19T15:03:00.604+03:00         NaN            1\n",
-       "1739  2022-02-19T15:03:04.794+03:00         NaN            0\n",
-       "1740  2022-02-19T15:10:50.459+03:00         NaN            1\n",
-       "1741  2022-02-19T15:10:53.883+03:00         NaN            0\n",
-       "\n",
-       "[1742 rows x 3 columns]"
+       "time           datetime64[ns, pytz.FixedOffset(180)]\n",
+       "state.value                                    int64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe = pd.read_csv('Source/PhoneChargingState.csv')\n",
-    "dataframe"
+    "dataframe.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time           621\n",
+       "state.value    621\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[dataframe[\"state.value\"] == 1].count() # 621 kez telefonu şarja takmışım.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -179,27 +120,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-01-20T16:41:59.185+03:00</td>\n",
+       "      <td>2022-01-20 16:41:59.185000+03:00</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-01-20T16:43:05.585+03:00</td>\n",
+       "      <td>2022-01-20 16:43:05.585000+03:00</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-01-20T16:50:25.380+03:00</td>\n",
+       "      <td>2022-01-20 16:50:25.380000+03:00</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-01-20T17:14:38.861+03:00</td>\n",
+       "      <td>2022-01-20 17:14:38.861000+03:00</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-01-20T17:15:34.099+03:00</td>\n",
+       "      <td>2022-01-20 17:15:34.099000+03:00</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -209,27 +150,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1737</th>\n",
-       "      <td>2022-02-19T15:02:53.145+03:00</td>\n",
+       "      <td>2022-02-19 15:02:53.145000+03:00</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1738</th>\n",
-       "      <td>2022-02-19T15:03:00.604+03:00</td>\n",
+       "      <td>2022-02-19 15:03:00.604000+03:00</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1739</th>\n",
-       "      <td>2022-02-19T15:03:04.794+03:00</td>\n",
+       "      <td>2022-02-19 15:03:04.794000+03:00</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1740</th>\n",
-       "      <td>2022-02-19T15:10:50.459+03:00</td>\n",
+       "      <td>2022-02-19 15:10:50.459000+03:00</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1741</th>\n",
-       "      <td>2022-02-19T15:10:53.883+03:00</td>\n",
+       "      <td>2022-02-19 15:10:53.883000+03:00</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -238,50 +179,62 @@
        "</div>"
       ],
       "text/plain": [
-       "                               time  state.value\n",
-       "0     2022-01-20T16:41:59.185+03:00            1\n",
-       "1     2022-01-20T16:43:05.585+03:00            0\n",
-       "2     2022-01-20T16:50:25.380+03:00            0\n",
-       "3     2022-01-20T17:14:38.861+03:00            1\n",
-       "4     2022-01-20T17:15:34.099+03:00            0\n",
-       "...                             ...          ...\n",
-       "1737  2022-02-19T15:02:53.145+03:00            0\n",
-       "1738  2022-02-19T15:03:00.604+03:00            1\n",
-       "1739  2022-02-19T15:03:04.794+03:00            0\n",
-       "1740  2022-02-19T15:10:50.459+03:00            1\n",
-       "1741  2022-02-19T15:10:53.883+03:00            0\n",
+       "                                 time  state.value\n",
+       "0    2022-01-20 16:41:59.185000+03:00            1\n",
+       "1    2022-01-20 16:43:05.585000+03:00            0\n",
+       "2    2022-01-20 16:50:25.380000+03:00            0\n",
+       "3    2022-01-20 17:14:38.861000+03:00            1\n",
+       "4    2022-01-20 17:15:34.099000+03:00            0\n",
+       "...                               ...          ...\n",
+       "1737 2022-02-19 15:02:53.145000+03:00            0\n",
+       "1738 2022-02-19 15:03:00.604000+03:00            1\n",
+       "1739 2022-02-19 15:03:04.794000+03:00            0\n",
+       "1740 2022-02-19 15:10:50.459000+03:00            1\n",
+       "1741 2022-02-19 15:10:53.883000+03:00            0\n",
        "\n",
        "[1742 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe.drop('state.hour',axis=1)"
+    "dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mUntitled-1.ipynb Cell 5'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:Untitled-1.ipynb?jupyter-notebook#ch0000004untitled?line=0'>1</a>\u001b[0m dataframe\u001b[39m.\u001b[39;49mcolumns[\u001b[39m'\u001b[39;49m\u001b[39mtime\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
-      "File \u001b[1;32mD:\\Python\\lib\\site-packages\\pandas\\core\\indexes\\base.py:4604\u001b[0m, in \u001b[0;36mIndex.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4601'>4602</a>\u001b[0m \u001b[39mif\u001b[39;00m is_scalar(key):\n\u001b[0;32m   <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4602'>4603</a>\u001b[0m     key \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mcast_scalar_indexer(key, warn_float\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m-> <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4603'>4604</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m getitem(key)\n\u001b[0;32m   <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4605'>4606</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mslice\u001b[39m):\n\u001b[0;32m   <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4606'>4607</a>\u001b[0m     \u001b[39m# This case is separated from the conditional above to avoid\u001b[39;00m\n\u001b[0;32m   <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4607'>4608</a>\u001b[0m     \u001b[39m# pessimization of basic indexing.\u001b[39;00m\n\u001b[0;32m   <a href='file:///d%3A/Python/lib/site-packages/pandas/core/indexes/base.py?line=4608'>4609</a>\u001b[0m     result \u001b[39m=\u001b[39m getitem(key)\n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
-     ]
+     "data": {
+      "text/plain": [
+       "0        True\n",
+       "1        True\n",
+       "2        True\n",
+       "3        True\n",
+       "4        True\n",
+       "        ...  \n",
+       "1737    False\n",
+       "1738    False\n",
+       "1739    False\n",
+       "1740    False\n",
+       "1741    False\n",
+       "Name: time, Length: 1742, dtype: bool"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "timestamp = pd.to_datetime(\"2022-01-25\")\n",
+    "dataframe[\"time\"].dt.date < timestamp\n"
+   ]
   }
  ],
  "metadata": {
